5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1578_1330.log
== TEST (2019-03-12 14:27:23) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:27:31) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.189442
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:28:37) 
-- CODE:
print(round(2,250/62))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2,250/62))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:28:47) 
-- CODE:
print(round(2,250/62))
-- EXECUTION TIME:
0.145153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 1, in <module>
    print(round(2,250/62))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:29:53) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:12:49) 
-- CODE:
print(round(250/6)2)
-- ERROR:
File "XXXX", line 1
    print(round(250/6)2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:13:18) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.219597
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:21:52) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 11:21:57) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.188401
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
